Update VOCUS 2023-06-06 patch

--- a/_posts/2020-04-22-VOCUS-欠債還錢-可以-超額查封-嗎.html
+++ b/_posts/2020-04-22-VOCUS-欠債還錢-可以-超額查封-嗎.html
@@ -8,20 +8,11 @@ tags: blog
 author: 王大明
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=PuZe0iIPn90&amp;feature=emb_title" class="video-screen" src="https://www.youtube.com/embed/PuZe0iIPn90" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">2020年4月14日有一個新聞：<a href="https://udn.com/news/story/7321/4491658" target="_blank" class="draft--a">紅單未繳房子竟被拍賣 法律學者：拍賣屋內電器就夠了</a></div>
 <div class="draft-block draft--p left">這個在法律用語叫「超額執行」或「超額查封」，算是老問題了。<br>例如：<a href="https://www.facebook.com/248462108665863/posts/344205319091541/" target="_blank" class="draft--a">在2014年就有律師在fb粉專說明過</a></div>
-<div><h3><a href="https://www.facebook.com/248462108665863/posts/344205319091541/"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left">如果你喜歡用聽的，法客電台的楊貴智律師在4月17日也用5分鐘的節目解說了一下。</div>
-<div><h3><a href="https://www.listennotes.com/zh-hant/podcasts/法客電台-by-楊貴智/聊新聞-00欠罰單1萬8-房子就被法拍了-UaZ7R5mF2D0/"></div>
+<div class="draft-block draft--p left">如果你喜歡用聽的，<a href="https://www.listennotes.com/zh-hant/podcasts/法客電台-by-楊貴智/聊新聞-00欠罰單1萬8-房子就被法拍了-UaZ7R5mF2D0/">法客電台的楊貴智律師在4月17日也用5分鐘的節目解說了一下</a>。</div>
 <div class="draft-block draft--p left">我目前看到最詳細的說明，是這篇：<a href="https://forum.ettoday.net/news/1697224?redirect=1" target="_blank" class="draft--a">欠1萬8祖厝被查封！屋主怨：法拍完才被買家通知</a>（ETtoday新聞雲 &gt; 雲論，2020/4/22）</div>
-<div><h3><a href="https://forum.ettoday.net/news/1697224?redirect=1"></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote">林更穎律師解說，在實務上，「超額查封」，是指「複數」查封的意思。例如一口氣查封「兩」棟房子。或除查封房子外，還查封帳戶，都會構成「超額查封」。但如果為了1.8萬元罰鍰，只查封一棟房子，在實務上不構成超額查封。</blockquote>
 <div class="draft-block draft--p left">我自己比較喜歡講判決書的故事。所以今天來分享三個關於「超額查封」的故事。</div>
 <h2 class="draft-block draft--h2" name="header-8hlla">第一個故事</h2>
@@ -50,7 +41,6 @@ author: 王大明
 <div class="draft-block draft--p left">所以判決李媽媽敗訴。<br><span style="font-weight: bold; ">李媽媽既然已經承諾了連帶保證李先生的60萬元。應該要如數給付給債主楊先生。</span></div>
 <div class="draft-block draft--p left">這個故事讓我們知道：<br><span style="text-decoration: underline; ">只是是白紙黑字簽下去的，不管是承諾書、本票、或連帶保證書，請一定要謹慎。</span></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">「超額執行」並不是太冷門的法律用詞，<br>它在日常生活也會看到。</div></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-41ee7">第二個故事</h3>
 <div class="draft-block draft--p left">裁定日期2020年3月18日，故事發生在台北。（最高法院裁定）</div>
 <div class="draft-block draft--p left">有一家建設公司，借了50億元沒有清償，公司名下的一片土地，被債權人聲請法院強制執行。在程序上，這片土地就會被法院拍賣，用來清償債務。</div>
@@ -58,11 +48,9 @@ author: 王大明
 <div class="draft-block draft--p left">然而，土地上有「刑事扣押處分」。<br>簡單講，買了之後可能還有些麻煩。<br><br>所以法院在拍賣公告的使用說明欄註記：</div>
 <blockquote class="draft-block draft--blockquote">故拍定後本院僅辦理本院所囑託之查封登記之塗銷，非本院囑託所為之其餘禁止處分登記，本院無從辦理塗銷，請投標人特別注意</blockquote>
 <div class="draft-block draft--quotesSpecial center"><div class="content">白話講，我這個民事執行法院只負責拍賣土地。<br>至於土地上的「刑事法院」扣押處分怎麼塗銷呢？<br>我是民事法院，沒辦法處理。</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">可以想像的，2018年2月23日第一次拍賣，沒人來投標應買。<br>法院只好第二次、第三次拍賣，每次價格酌減百分之二十。</span><br><br>終於到了2019年4月1日，距離第一次拍賣1年又1個多月後，有公司以112億5888萬8889元拍定這片土地，並已繳足價金。</div>
 <div class="draft-block draft--p left">執行法院於2019年5月8日核發不動產權利移轉證書。<br>得標的公司（拍定人），也收到了這個移轉證書。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">這個時候，土地就拍賣成功了，<br>法律用語叫「拍賣程序終結」。</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">然而，在拍賣程序終結前，這間欠債50億的建設公司（債務人），<br>在過程中有向法院作一些「抗告」，大意是執行程序失當而且違法。<br>例如：</div>
 <ul>
   <li class="draft-block draft--li">拍賣時的註記會影響投標人的投標意願及潛在投標價格；</li>
@@ -74,7 +62,6 @@ author: 王大明
 <blockquote class="draft-block draft--blockquote">再抗告人之聲明異議，雖在拍賣程序終結前，惟依前開說明，系爭土地之拍賣強制執行程序既已終結，縱為撤銷第三次拍賣程序或更正拍賣公告註記之裁定，亦屬無從執行，第52號裁定駁回再抗告人之異議，理由雖有不同，結論則無二致等詞，因而維持臺北地院所為駁回再抗告人異議之裁定，駁回其抗告，經核並無適用法規顯有錯誤之情形。再抗告意旨，指摘原裁定適用法規顯有錯誤，聲明廢棄，非有理由。</blockquote>
 <div class="draft-block draft--p left">白話講，</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">強制執行程序終結了，一切都結束了。<br>之前的法院使用不同理由駁回你的抗告，<br>我最高法院也認為沒問題。</div></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-79qmm">第三個故事</h2>
 <div class="draft-block draft--p left">裁定日期2020年2月3日，故事發生在新竹。（最高法院裁定）</div>
 <div class="draft-block draft--p left">有一位鄭先生，他對於債務人A有新臺幣1580萬元本息的債權，聲請對A所有不動產強制執行，包含在苗栗、臺中、桃園的不動產，聲請法院查封。</div>
@@ -105,10 +92,4 @@ author: 王大明
   <li class="draft-block draft--li"><span style="font-weight: bold; ">如果還要考量「潛在的債權人」，法律就不用規定「不得超額查封」了</span><br>法院在衡量是否超額查封時，應該以客觀上，查封的價額是否明顯足夠清償已聲請的債權，當作判斷依據。<br>至於「存在與否尚不確定」的債權，並非判斷是否超額查封所需考量的因素，否則無異使強制執行法第50條「不得超額查封」的規定，形同具文。</li>
 </ol>
 <div class="draft-block draft--quotesSpecial center"><div class="content">法院駁回了鄭先生的抗告。</div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=LlsPO0jNxSk" class="video-screen" src="https://www.youtube.com/embed/LlsPO0jNxSk" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
