--- a/_posts/2020-05-12-VOCUS-被當小三也能報仇.html
+++ b/_posts/2020-05-12-VOCUS-被當小三也能報仇.html
@@ -9,14 +9,13 @@ author: 王大明
 ---
 
 <div class="draft-block draft--p left">（2020年5月14日補充：我之前寫過另一篇貞操權的故事，歡迎一併參考。）</div>
-<div><h3><a href="https://vocus.cc/@jimchu/5e1244d8fd8978000108e13e"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://vocus.cc/@jimchu/5e1244d8fd8978000108e13e">https://vocus.cc/@jimchu/5e1244d8fd8978000108e13e</a></div>
 <div class="draft-block draft--p left">在故事開始前，我們先來聊一個2016年的新聞：</div>
 <div class="draft-block draft--p left"><a href="https://news.ltn.com.tw/news/society/paper/1002789" target="_blank" class="draft--a">醫師把空姐瞞婚 損「貞操權」賠150萬</a></div>
-<div><h3><a href="https://tw.appledaily.com/headline/20160621/4VBLHPAQ3LQPO63Q2AOA5ZV6TU/"></div>
+<div><a href="https://tw.appledaily.com/headline/20160621/4VBLHPAQ3LQPO63Q2AOA5ZV6TU/">https://tw.appledaily.com/headline/20160621/4VBLHPAQ3LQPO63Q2AOA5ZV6TU/</a></div>
 <div class="draft-block draft--p left">這個故事大意是，桃園地院2016年6月20日做出一起判決，一名醫師14年前因搭機認識一名空姐，展開追求後交往，但醫師3年後與另一名女子結婚生子，卻隱瞞已婚身分持續與空姐交往。直到2012年空姐逼問，醫師才坦承已婚並故意遠離。</div>
 <div class="draft-block draft--p left">空姐認為醫師的行為讓自己「浪費10年青春」，從32歲至43歲都耽誤給這個醫師了，可說已完全喪失生兒育女的機會。<br>所以空姐以「侵害貞操權」提告求償，桃園地院判決：醫師須賠償空姐150萬元。</div>
-<div><h3><a href="chinatimes.com/realtimenews/20180713000006-260402?chdtv"></div>
+<div><a href="chinatimes.com/realtimenews/20180713000006-260402?chdtv">chinatimes.com/realtimenews/20180713000006-260402?chdtv</a></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">這個故事聽起來有沒有很像中國的「<a href="https://kknews.cc/zh-tw/society/ya5ym9g.html" target="_blank" class="draft--a">青春損失費</a>」？<br>只是在台灣，我們換了一個名字叫「貞操權」。</div></div>
 <div class="draft-block draft--p left">順帶一提，這位空姐的「貞操權」沒有像新聞講得那麼簡單，這件案子打到二審，男方主張：</div>
 <blockquote class="draft-block draft--blockquote">空姐在2013年6月1日已知悉男方已婚的事實，卻到2015年6月10日才提起訴訟，超過兩年了，所以我不用賠償妳。</blockquote>
@@ -46,13 +45,11 @@ author: 王大明
 <div class="draft-block draft--p left">余小姐表示：陳先生對她很好，兩人計畫結婚，有很多婚後規劃，也發生了性行為，等於關係更進一步，感覺上關係更好。</div>
 <div class="draft-block draft--p left">余小姐本來在在中國工作，為了婚後在臺灣定居，還多方打聽有無臺灣工作機會，余小姐在在臺灣的朋友都知道兩人正在交往。</div>
 <div class="draft-block draft--p left">對了，我剛剛說，余小姐求償100萬元，<a href="https://www.judicial.gov.tw/tw/cp-1653-58267-4ff46-1.html" target="_blank" class="draft--a">裁判費就要10900元</a>。（律師費另計）</div>
-<div><h3><a href="https://www.judicial.gov.tw/tw/cp-1653-58267-4ff46-1.html"></div>
 <h3 class="draft-block draft--h3" name="header-8hjmv">法院判決：</h3>
 <div class="draft-block draft--p left">陳先生應該賠償余小姐，30萬元。</div>
 <div class="draft-block draft--p left">這樣算是官司打贏了嗎？<br>如果從裁判費來看，<a href="https://law.moj.gov.tw/LawClass/LawSingle.aspx?pcode=B0010001&amp;flno=78" target="_blank" class="draft--a">裁判費是由敗訴的一方負擔</a>。</div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">這件官司的裁判費，由陳先生負擔三分之一，其餘三分之二由余小姐負擔。<br></span>余小姐只贏了一部分，在法律上叫「<a href="http://www.lawtw.com/article.php?template=article_content&amp;area=free_browse&amp;parent_path=,1,659,&amp;job_id=107651&amp;article_category_id=1035&amp;article_id=47414" target="_blank" class="draft--a">一部勝訴</a>」。</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1566185309550-a792190c11cc?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="1350" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1566185309550-a792190c11cc" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖片來源：Unsplash線上免費圖庫</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-ce4qi">第二個故事</h2>
 <div class="draft-block draft--p left">判決日期2020年3月31日，故事發生在高雄。</div>
 <div class="draft-block draft--p left">蔡小姐於2015年底透過網路交友平台認識李先生，李先生自稱未婚單身，蔡小姐誤信為真而開始與之交往，然於2016年10月初，李先生突然告知蔡小姐，心中另有意中人後，蔡小姐即未再與李先生往來，僅偶有朋友間之互相問候簡訊。</div>
@@ -82,10 +79,8 @@ author: 王大明
 <div class="draft-block draft--p left">最後法官斟酌雙方身分資力與加害程度，判決：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">李先生在精神慰撫金賠償60萬元，<br>恐嚇訊息的部分賠償5萬元，合計65萬元。<br>（計算式：60萬元＋5 萬元＝65萬元）</div></div>
 <div class="draft-block draft--p left">我剛剛說蔡小姐總共求償150萬元。（裁判費15850元，律師費另計）</div>
-<div><h3><a href="https://www.judicial.gov.tw/tw/cp-1653-58267-4ff46-1.html"></div>
 <div class="draft-block draft--p left"><br>法官判李先生賠償：65萬元。<br>所以訴訟費用由李先生負擔五分之二，其餘五分之三由蔡小姐負擔。</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1422207049116-cfaf69531072?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="751" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1422207049116-cfaf69531072" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖片來源：Unsplash線上免費圖庫</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-4ijab">第三個故事</h2>
 <div class="draft-block draft--p left">判決日期2020年04月24日，故事發生在台北。</div>
 <h3 class="draft-block draft--h3" name="header-3i3n6">郭小姐說，</h3>
@@ -105,5 +100,3 @@ author: 王大明
 <div class="draft-block draft--quotesSpecial center"><div class="content">法院判決郭小姐全部敗訴。<br>訴訟費用由郭小姐負擔。</div></div>
 <div class="draft-block draft--p left">延伸閱讀：</div>
 <div class="draft-block draft--p left"><a href="https://www.thenewslens.com/article/131309" target="_blank" class="draft--a">男孩告10年前的國中女友「奪去貞操」，為什麼他贏了？</a></div>
-<div><h3><a href="https://www.thenewslens.com/article/131309"></div>
-<div class="draft-block draft--p left"></div>
