--- a/_posts/2020-05-26-VOCUS-傑克與魔豆-是犯罪故事.html
+++ b/_posts/2020-05-26-VOCUS-傑克與魔豆-是犯罪故事.html
@@ -9,7 +9,7 @@ author: 王大明
 ---
 
 <div class="draft-block draft--p left">古老的童話故事，常有很多個版本。<br>我們先用一分鐘的時間，分享一下我看到的傑克與魔豆的故事。</div>
-<div><h3><a href="https://winnipanpan.pixnet.net/blog/post/462710204-%E3%80%8A%E5%82%91%E5%85%8B%E8%88%87%E9%AD%94%E8%B1%86%E3%80%8B%E7%9A%84%E7%AB%A5%E8%A9%B1%E5%88%86%E6%9E%90%EF%BC%9A-%E5%BE%9E%E5%85%92%E7%AB%A5%E5%81%B7%E7%AB%8A%E3%80%81"></div>
+<div><a href="https://winnipanpan.pixnet.net/blog/post/462710204-%E3%80%8A%E5%82%91%E5%85%8B%E8%88%87%E9%AD%94%E8%B1%86%E3%80%8B%E7%9A%84%E7%AB%A5%E8%A9%B1%E5%88%86%E6%9E%90%EF%BC%9A-%E5%BE%9E%E5%85%92%E7%AB%A5%E5%81%B7%E7%AB%8A%E3%80%81">https://winnipanpan.pixnet.net/blog/post/462710204-%E3%80%8A%E5%82%91%E5%85%8B%E8%88%87%E9%AD%94%E8%B1%86%E3%80%8B%E7%9A%84%E7%AB%A5%E8%A9%B1%E5%88%86%E6%9E%90%EF%BC%9A-%E5%BE%9E%E5%85%92%E7%AB%A5%E5%81%B7%E7%AB%8A%E3%80%81</a></div>
 <h2 class="draft-block draft--h2" name="header-9qof">這個故事教了什麼犯罪？</h2>
 <div class="draft-block draft--p left">有一個貧窮的寡婦，他只有一個兒子叫做傑克，那貧窮的寡婦說這個我們家沒有錢了，所以請把家裡的牛拿去賣掉。</div>
 <div class="draft-block draft--p left">這個傑克好像很不會做生意，他只把他的牛換了5顆豆子，而對方說這個叫做魔豆，不是一般的豆子。</div>
@@ -60,8 +60,6 @@ author: 王大明
 <div class="draft-block draft--p left">所以，在目前法院的穩定見解：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">同樣是偷東西，用石頭把水管砸破，那個石頭並不是兇器。<br><br>但是用螺絲起子甚至你不需要拿出來做任何的使用，只要帶在身上，螺絲起子就是兇器了。<br><br>前者可能只需要判拘役一二十天，<br>後者至少就是有期徒刑6個月起跳。</div></div>
 <div class="draft-block draft--p left">（延伸閱讀：錢建榮法官，<a href="https://www.upmedia.mg/news_info.php?SerialNo=12090" target="_blank" class="draft--a">比車子還貴的車牌</a>）</div>
-<div><h3><a href="https://www.upmedia.mg/news_info.php?SerialNo=12090"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">聽到這邊你可能會好奇，所以法官真的會針對於每一種小偷攜帶的隨身物品，<br>來判斷他是不是「攜帶兇器」嗎？</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">答案是：真的會。</span></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1503789146722-cf137a3c0fea?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="822" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1503789146722-cf137a3c0fea" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">（圖片來源：Unsplash線上免費圖庫）</figcaption></div></figure>
@@ -76,12 +74,6 @@ author: 王大明
 <div class="draft-block draft--p left">石先生砸的是一塊磚頭，它跟石頭一樣 是自然界的物質<span style="text-decoration: line-through; ">（明明磚頭就不是自然界物質，不然哪來的磚窯）</span>，所以是普通的竊盜罪。處有期徒刑4個月，可以易科罰金。</div>
 <blockquote class="draft-block draft--blockquote">刑法第321條第1項第3款攜帶兇器竊盜罪，所稱之兇器，乃依一般社會觀念足以對人之生命、身體、安全構成威脅，而具有危險性之「器械」而言。而磚塊、石頭乃自然界之物質，尚難謂為通常之「器械」，從而持磚塊、石頭砸毀他人車窗竊盜，尚難論以攜帶兇器竊盜罪（最高法院92年度台非字第38號判決參照）。</blockquote>
 <div class="draft-block draft--quotesSpecial center"><div class="content">從一審到二審，<br>有期徒刑從8個月改成4個月，而且可以易科罰金，1000元可以折算一天。<br><br>也就是說這一位石頭先生，他只要給國家120000元就可以不用坐牢了。</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">這時候你有沒有覺得，<br><span style="font-weight: bold; ">如果隔壁的老王只是用鐮刀偷割了一把高麗菜，被判有期徒刑6個月；<br>而拿磚頭砸車窗行竊的石先生，居然可以易科罰金，</span><br><br>很不公平呢？</div>
-<div><h3><a href="https://news.ltn.com.tw/news/Yunlin/breakingnews/2878478"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://news.ltn.com.tw/news/Yunlin/breakingnews/2878478">https://news.ltn.com.tw/news/Yunlin/breakingnews/2878478</a></div>
 <div class="draft-block draft--p left">（延伸閱讀：<a href="https://www.tpc.moj.gov.tw/292885/292897/661783/688453/post" target="_blank" class="draft--a">竊盜之法律責任</a>）</div>
-<div><h3><a href="https://www.tpc.moj.gov.tw/292885/292897/661783/688453/post"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
