--- a/_posts/2023-05-16-VOCUS-全球化的校正之後-3.html
+++ b/_posts/2023-05-16-VOCUS-全球化的校正之後-3.html
@@ -28,7 +28,7 @@ author: 王立第二戰研所
 <ul>
   <li class="draft-block draft--li">雖然是去年的報導，但環境並沒有什麼改變</li>
 </ul>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/EIOVCnxbEjY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/EIOVCnxbEjY"></iframe></div>
 <div class="draft-block draft--p left">除此之外，這類商家需要人潮，不會有多少人想在已經沒落的街區開新店。學校教的都是挑人潮多的地方，於是新人大量集中到人多的都市，進一步讓市場更加擁擠。</div>
 <div class="draft-block draft--p left">這跟全球化有什麼關係？</div>
 <h3 class="draft-block draft--h3" name="header-9tqm">努力認真過後卻只剩負債，你會怎麼想？</h3>
