--- a/_posts/2023-05-30-VOCUS-中共借環保反殺-美歐致命誤判或鑄大錯.html
+++ b/_posts/2023-05-30-VOCUS-中共借環保反殺-美歐致命誤判或鑄大錯.html
@@ -8,8 +8,7 @@ tags: blog
 author: 透視中國
 ---
 
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/iGaSCcCOtWc"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/iGaSCcCOtWc"></iframe></div>
 <div class="draft-block draft--p left">作者：方涵</div>
 <div class="draft-block draft--p left">從最近的G7會議我們可以明顯看到，美歐對中共的圍堵和對抗越來越升級，例如在芯片封堵、實業外遷、俄烏戰爭、台海關係等方面，但就是在環保方面對中共顯得異常軟弱，今天我們來剖析一下中西方的環保攻防戰，這有助於我們理解目前西方和中共之間到底是要打還是要和，為何中美關係顯得如此矛盾的深層原因，由於這個話題涉及的內容非常多，今天只能簡略地梳理一個大的框架。</div>
 <div class="draft-block draft--p left">美歐為什麼這樣積極的推動環保及新能源轉型呢？不可否認，當下人類的工業化普及，的確對環境造成了很大污染。例如現在火熱的電動汽車，其動力電池經過6～10年後就面臨報廢，三元鋰電池中就含有鎳、鈷、錳等有毒重金屬，同時電池電解液的氟有機物也會釋放出具有強烈腐蝕性的有害物質。據測算，到2025年，僅中國大陸報廢的動力電池就有78萬噸，若處理不當，將造成重金屬、粉塵、水等多種環境污染。</div>
@@ -35,4 +34,3 @@ author: 透視中國
 <div class="draft-block draft--p left">美歐對中共的另一個思維盲點是在對華政策中缺少區分中共和中國的意識。它們認為執政黨和國家是兩個截然不同的概念，這是不證自明的。但中共自1949年竊政以來，一直給民眾洗腦說它是中國的唯一選擇，黨就是國，國就是黨。這樣西方針對中共的一些措施，容易被中國人解讀成西方在針對中國，反而緩解了中共和民眾間的尖銳矛盾。例如，西方針對新冠疫情的來源的追查，這當然很重要，美國由於中共對疫情的瞞報，死了110多萬人，這件事當然需要有個說法。但只證明了新冠病毒來自武漢實驗室洩露，很難影響中共在國內的民心。如果加上大力追查、收集到底在疫情期間中共瞞報了多少中國民眾的死亡人數，這就能激發中國民眾對中共極端清零措施的回憶、對逝去親人的懷念、對中共各級無人性官員的不滿，中共就很難把這個話題轉變成危機公關的表演。</div>
 <div class="draft-block draft--p left">總結一下，西方精英們不管出於什麼目的推動的全球環保、新能源轉型，其結果是：在外交上疏遠了產油國盟友；引發了俄烏戰爭；在國內承受著通脹高企、金融不穩定；極具戰略性的汽車製造業正失去技術優勢。在先付出了如此重大的代價後，卻由於誤算了中共掌控全球的野心和將計就計的策略，最終有可能演變成作繭自縛，為中共做嫁衣的局勢。</div>
 <div class="draft-block draft--p left">但由於目前中共也在承受國內貨幣通縮、人口減少、經濟萎靡、民心流失的種種困境，西方如能在制定對中共政策時，更深入地了解中共本性和強弱點，分清中共和中國，還有可能破解中共借環保新能源大旗重構世界秩序的野心。◇</div>
-<div class="draft-block draft--p left"></div>
