--- a/_posts/2020-04-30-VOCUS-不當體罰延長安置.html
+++ b/_posts/2020-04-30-VOCUS-不當體罰延長安置.html
@@ -11,15 +11,12 @@ author: 王大明
 <div class="draft-block draft--p left">父母或老師可以管教子女嗎？如果「不當管教」會有什麼下場？</div>
 <h2 class="draft-block draft--h2" name="header-fc910">專線電話：113跟1957</h2>
 <div class="draft-block draft--p left">相信很多有帶小孩經驗的朋友，聽過「113」保護專線。</div>
-<div><h3><a href="https://www.mohw.gov.tw/cp-85-2641-1.html"></div>
+<div><a href="https://www.mohw.gov.tw/cp-85-2641-1.html">https://www.mohw.gov.tw/cp-85-2641-1.html</a></div>
 <div class="draft-block draft--p left">如果你有更多涉略，可能還聽過「1957」。<br>它是福利諮詢專線，有專業社工人員執行接線服務，橫向聯結自殺防治、就業安全、就學安全及治安維護等網絡。每日上午8點至晚上10點，全年無休。</div>
-<div><h3><a href="https://www.mohw.gov.tw/cp-3203-21786-1.html"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://www.mohw.gov.tw/cp-3203-21786-1.html">https://www.mohw.gov.tw/cp-3203-21786-1.html</a></div>
 <h2 class="draft-block draft--h2" name="header-a3kgs">安置兒童的「返家」</h2>
 <div class="draft-block draft--p left">但是在兒童的視角，如果真的發生一起暴力事件，大概長什麼樣子？送到安置機關會不會真的比較好？<span style="font-weight: bold; ">什麼時候可以「返家」</span>？</div>
 <div class="draft-block draft--p left">我沒有開玩笑的意思，社工口中的「返家」，很多時候不是我們想像的「回家」。（延伸閱讀：<a href="https://npost.tw/archives/26496" target="_blank" class="draft--a">安置機構的孩子，為什麼始終無法返家？</a>）</div>
-<div><h3><a href="https://npost.tw/archives/26496"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-cf91t">第一個故事</h2>
 <div class="draft-block draft--p left">裁定日期2020年4月15日，故事發生在桃園</div>
 <div class="draft-block draft--p left">有一個小女生A，未滿12歲，自幼與祖母和父親同住。因為小女生A常有說謊行為，父親基於教養會予以適當懲戒。</div>
@@ -49,27 +46,22 @@ author: 王大明
 <div class="draft-block draft--p left">延伸閱讀：<br><a href="https://www.tkbgo.com.tw/tkbtl/article/toDetail.jsp?id=87" target="_blank" class="draft--a">【兒少法】我的小孩被帶走了！？淺論兒少法中的緊急安置</a></div>
 <div class="draft-block draft--p left"><a href="https://www.twreporter.org/a/high-risk-youth-social-worker" target="_blank" class="draft--a">社工與他的脆弱家庭們──如何合力送孩子回安全的家</a></div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=gU4GBCCg6Bc&amp;feature=emb_title" class="video-screen" src="https://www.youtube.com/embed/gU4GBCCg6Bc" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-fkdkb">第二個故事</h2>
 <div class="draft-block draft--p left">判決日期2020年2月19日，它是一個公務員懲戒委員會的再審判決。</div>
 <div class="draft-block draft--p left">這件事有上新聞，標題是：<a href="https://www.youtube.com/watch?v=f2bYagVICiE" target="_blank" class="draft--a">南投少年安置機構性侵案 彈劾8官員</a>。刊登日期是2018年7月16日。</div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=f2bYagVICiE" class="video-screen" src="https://www.youtube.com/embed/f2bYagVICiE" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-1etrs">發生了什麼事？</h3>
 <div class="draft-block draft--p left">簡單講，南投縣某安置機構收容少年發生<span style="text-decoration: underline; ">性侵害案件，2014年至2017年3月間，共發生21起院生遭性侵害案件。</span></div>
 <blockquote class="draft-block draft--blockquote">以撫摸性器官、口交、肛交等方式，合意或被迫予以侵害，性侵害的地點遍及寢室、廁所、視聽室、活動中心，甚至於參訪活動時，也發生在外宿機構的廁所內，以及未立案之兒童學苑內。<br><br>南投縣政府社會及勞動處、臺中地方法院少年保護官，身為公務員，都未能及早查明該機構，也沒有依法通報，以致該機構後續屢屢發生性侵害事件。<br><br>被收容的兒少個案，身心受創嚴重，更有少年從被害人轉為加害人，關係紛亂，損及個案權益甚鉅。</blockquote>
 <div class="draft-block draft--p left">所以<a href="https://www.cy.gov.tw/News_Content.aspx?n=213&amp;s=12977" target="_blank" class="draft--a">監察院在2018年7月16日，召開彈劾審查會，全案移送公務員懲戒委員會審理。 </a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">聽起來，這個收容機關，我們稱為「Z機構」好了，是一個不合適的收容機關。<br></span>長期違法超收、被控暴力管教、3年來發生21起性侵案件。而政府官員都沒有發現。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">真的是「台版熔爐」嗎？</div></div>
-<div><h3><a href="https://vocus.cc/worldcinema/5d31c594fd89780001427710"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://vocus.cc/worldcinema/5d31c594fd89780001427710">https://vocus.cc/worldcinema/5d31c594fd89780001427710</a></div>
 <div class="draft-block draft--p left"><a href="https://www.twreporter.org/a/youth-welfare-institutes-juvenile-elinquency-1" target="_blank" class="draft--a">有一個媒體叫「報導者」，去採訪了Z機關最後一個離開的少年。</a><br>少年早在事發前就結案，自願繼續住在機構把高職念完。<br>機構也轉請同宗教組織的基金會讓少年繼續免費居住，由南投縣政府社工定期追蹤。</div>
 <div class="draft-block draft--p left">社工問少年要不要搬出去住，少年不想搬，他說：「<span style="font-weight: bold; ">因為這邊生活比較規律，像個家，搬出去就沒有伴</span>」。</div>
 <div class="draft-block draft--p left">媒體在採訪最後，問少年有沒有話想對負責人夫妻說？他有些不好意思地笑了：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">「謝謝他們當時沒放棄我。」</div></div>
-<h3 class="draft-block draft--h3" name="header-14ung"></h3>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1483726234545-481d6e880fc6?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1483726234545-481d6e880fc6" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">（來源：Unsplash線上免費圖庫）</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-4vf0c"><span style="font-weight: bold; ">Z機關，是國內唯一純粹收容司法案件安置少年的機關。</span></h3>
 <div class="draft-block draft--p left">國內所謂的收容機關，很多不是政府機關，是民間團體。</div>
 <blockquote class="draft-block draft--blockquote">1997年，在修訂《少年事件處理法》時過於大意，以為當年的兒童局會訂定執行的法律，不料兒童局一開始就因沒有人力、財力拒絕合作。<br><br>司法院不得已下自己出錢、找安置機構，不過司法院不是執行機關，根本沒有這個預算；<br><br>法院編列的照顧成本不足，也會因欠缺經驗找到不合格的單位。而且司法人員對機構沒有監督權。<br><br><span style="font-weight: bold; ">法律與行政的未臻完備，造成法官「先找到床位才能下裁定」的實務困境。</span></blockquote>
@@ -79,8 +71,6 @@ author: 王大明
 <div class="draft-block draft--p left">這個數字，法院怎麼看？<br>法院有「少年調查官」及「少年保護官」。<br>（參考：<a href="https://tcd.judicial.gov.tw/2014tcd/NewsType1_Content.aspx?id=84&amp;page=2&amp;type=5" target="_blank" class="draft--a">調查保護官在做些什麼？</a>）</div>
 <blockquote class="draft-block draft--blockquote">媒體訪問時，一位調保官聽到這個數字，不以為然地笑起來：<br>「床位根本看得到吃不到，有毒癮、性侵紀錄、心智障礙或超過17歲的孩子，機構覺得不好帶，收容意願很低。部分機構專收女少年，就算有床位，男少年也進不去。找床位的過程，我們常得用求的。」<br><br>她語帶無奈：「被拒絕是常態，我曾有位17歲輕度智能障礙、曾是性侵加害人的少年，從南到北被拒絕10次。他留在原本生活圈，犯罪行為停不下來，還是進了感化。」<br><br>她最後補上一句：「被拒絕到最後，有些機構還會問我：『妳怎麼不去找Z機構？』」<br><br><span style="font-weight: bold; ">在第一線司法人員口中，Z機構確實對在機構間流浪的「難置兒」有較大包容。</span><br><br>台南地方法院少年法庭法官謝瑞龍記得，曾有位勒索同學錢財的少年，拖著腫脹、快撐破褲管的右腿出庭，原來少年長期苦於下肢淋巴水腫象腿症，相依為命的祖父卻沒錢幫他醫治。他連結社會局資源帶少年就醫，並為少年找安置機構，<br><br>但淋巴水腫需手術才能根治，多數機構皆以無法提供醫療資源為由婉拒收容。<br><br>最後Z機構接納少年，自籌金額不小的醫藥費，帶他到台北手術。<br>少年病癒後不再自卑，以一技之長自力更生。<br><br><span style="font-weight: bold; ">就社會觀感來看，機構願意接受受虐、父母無力撫養的孩子，募款資源易得，孩子照顧起來也比有非行行為的少年容易。</span><br><br>到最後，願意收容非行少年的機構，絕大多數有宗教濟世色彩，且也僅提供有限床位。<br><span style="font-weight: bold; ">這些年來，只有Z機構願意全收司法安置少年。</span></blockquote>
 <div class="draft-block draft--p left">（參考：<a href="https://www.twreporter.org/a/youth-welfare-institutes-juvenile-elinquency-1" target="_blank" class="draft--a">「少年安置機構性侵案」彈劾風暴，法院和政府為何一再漏接</a>？）</div>
-<div><h3><a href="https://www.twreporter.org/a/youth-welfare-institutes-juvenile-elinquency-1"></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-dubh">我們回到公務員懲戒。</h3>
 <div class="draft-block draft--p left">判決是，<br><span style="text-decoration: underline; ">南投縣政府社會及勞動處處長、副處長 ，記申誡</span>；<span style="text-decoration: underline; "><br>科長、辦事員 記過一次</span>；<span style="text-decoration: underline; "><br>臺灣南投地方法院少年保護官，記過二次</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">被懲戒的副處長、科長、辦事員，提了再審。希望法院再判斷一次。</span><br><span style="text-decoration: line-through; ">法院體系的少年保護官反而沒提再審（誤</span></div>
@@ -101,8 +91,7 @@ author: 王大明
 <div class="draft-block draft--p left"><a href="https://www.taisounds.com/w/TaiSounds/society_19011909220337857" target="_blank" class="draft--a">「孩子被虐，社工不用負責嗎？」保護孩子，是整個社會的責任</a></div>
 <div class="draft-block draft--p left"><a href="https://opinion.cw.com.tw/blog/profile/477/article/8996" target="_blank" class="draft--a">安置輔導然後呢？給高風險孩子一個真正的避風港</a></div>
 <div class="draft-block draft--p left"><a href="https://www.twreporter.org/a/youth-welfare-institutes-juvenile-elinquency-2" target="_blank" class="draft--a">當安置機構接連停業，誰幫司法少年撐一把傘？</a></div>
-<div><h3><a href="https://tw.appledaily.com/local/20180611/MJUITETCLOAWBHGBOBULLEQKMA/"></div>
-<div class="draft-block draft--p left"></div>
+<div><a href="https://tw.appledaily.com/local/20180611/MJUITETCLOAWBHGBOBULLEQKMA/">https://tw.appledaily.com/local/20180611/MJUITETCLOAWBHGBOBULLEQKMA/</a></div>
 <h2 class="draft-block draft--h2" name="header-3g2mt">第三個故事</h2>
 <div class="draft-block draft--p left">判決日期2019年10月30日，故事發生在台北（行政訴訟判決）</div>
 <div class="draft-block draft--p left">這是一個行政訴訟，吳老師是臺北市立啟明學校幼兒部班級教師，被台北市政府裁處：罰鍰3萬元。</div>
@@ -140,6 +129,4 @@ author: 王大明
 <div class="draft-block draft--p left">訴願決定及原處分均撤銷。<br>訴訟費用由臺北市政府負擔。</div>
 <div class="draft-block draft--p left"><span style="text-decoration: line-through; ">很有趣的，原告的訴訟代理人是兩名律師，被告的代表人柯文哲市長，訴訟代理人是陳佩琪（誤</span></div>
 <div class="draft-block draft--p left">延伸閱讀：<br><a href="https://www.thenewslens.com/article/83580" target="_blank" class="draft--a">《我在少年中途之家的日子》：以結果論來斷定孩子們的成就，極其不公平</a></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block"><iframe title="https://www.youtube.com/watch?v=MDnRKfI1x_w" class="video-screen" src="https://www.youtube.com/embed/MDnRKfI1x_w" frameborder="0" allowfullscreen="" referrerpolicy="no-referrer"></iframe></div>
-<div class="draft-block draft--p left"></div>
