--- a/_posts/2023-06-05-PQ-北韓間諜衛星發射失敗-北韓居民10年糧草錢化為星塵.html
+++ b/_posts/2023-06-05-PQ-北韓間諜衛星發射失敗-北韓居民10年糧草錢化為星塵.html
@@ -26,7 +26,7 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4c06f724-9660aeb5-25f6-4d79-982d-57804b4d0944.png" alt="" class="wp-image-138731" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4c06f724-9660aeb5-25f6-4d79-982d-57804b4d0944.png 559w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4c06f724-9660aeb5-25f6-4d79-982d-57804b4d0944-300x169.png 300w" sizes="(max-width: 727px) 100vw, 727px" /><figcaption>在北韓載有軍事偵察衛星的火箭發射失敗墜落後，韓國軍方公開了火箭殘骸照片，上面的紅色字樣也曾在北韓洲際飛彈上被確認到。<br>（圖／韓國聯合參謀本部）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4c06f724-9660aeb5-25f6-4d79-982d-57804b4d0944.png" alt="" class="wp-image-138731" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4c06f724-9660aeb5-25f6-4d79-982d-57804b4d0944.png 559w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/4c06f724-9660aeb5-25f6-4d79-982d-57804b4d0944-300x169.png 300w" sizes="(max-width: 727px) 100vw, 727px" /><figcaption>在北韓載有軍事偵察衛星的火箭發射失敗墜落後，韓國軍方公開了火箭殘骸照片，上面的紅色字樣也曾在北韓洲際飛彈上被確認到。<br>（圖／韓國聯合參謀本部）</figcaption></figure></div>
 
 
 
