--- a/_posts/2023-06-06-PQ-陳菊率15監委巡查國安局關注中國介選-ait主席-美國反對外部干預台灣選舉.html
+++ b/_posts/2023-06-06-PQ-陳菊率15監委巡查國安局關注中國介選-ait主席-美國反對外部干預台灣選舉.html
@@ -14,7 +14,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-1024x771.jpg" alt="" class="wp-image-138847" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-1024x771.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-300x226.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-768x578.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030.jpg 1475w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>監察院外交及國防委員會委員巡查國安局特勤中心／圖：監察院提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-1024x771.jpg" alt="" class="wp-image-138847" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-1024x771.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-300x226.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030-768x578.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1d2e3bb1-4622-43d7-91f8-7be76d1bf030.jpg 1475w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>監察院外交及國防委員會委員巡查國安局特勤中心／圖：監察院提供。</figcaption></figure></div>
 
 
 
