--- a/_posts/2023-06-06-PQ-青春煉獄又現蹤-衛福部-終結性影像-沒有人是局外人.html
+++ b/_posts/2023-06-06-PQ-青春煉獄又現蹤-衛福部-終結性影像-沒有人是局外人.html
@@ -56,7 +56,7 @@ author: 陳柏諺
 
 
 
-<p>衛生福利部表示已建置「<a href="https://tw-ncii.win.org.tw/">性影像處理中心</a>」，受理民眾求助移除性影像，及協助轉介被害人保護扶助。<strong>性影像被害人可直接至衛福部首頁的「<a href="https://tw-ncii.win.org.tw/">性影像處理中心</a>」提出線上申訴</strong>，由中心通知網際網路平台業者限制瀏覽或移除性影像，透過公權力落實性影像移除下架。「<a href="https://tw-ncii.win.org.tw/">性影像處理中心</a>」也將協助當事人依自身意願提出刑事告訴，透過司法強制力把性影像取回。<strong>任何人若發現有兒少性影像，亦可直接向「<a href="https://tw-ncii.win.org.tw/">性影像處理中心</a>」提出檢舉。</strong></p>
+<p>衛生福利部表示已建置「<a href="https://tw-ncii.win.org.tw/" target="_blank" rel="noopener">性影像處理中心</a>」，受理民眾求助移除性影像，及協助轉介被害人保護扶助。<strong>性影像被害人可直接至衛福部首頁的「<a href="https://tw-ncii.win.org.tw/" target="_blank" rel="noopener">性影像處理中心</a>」提出線上申訴</strong>，由中心通知網際網路平台業者限制瀏覽或移除性影像，透過公權力落實性影像移除下架。「<a href="https://tw-ncii.win.org.tw/" target="_blank" rel="noopener">性影像處理中心</a>」也將協助當事人依自身意願提出刑事告訴，透過司法強制力把性影像取回。<strong>任何人若發現有兒少性影像，亦可直接向「<a href="https://tw-ncii.win.org.tw/" target="_blank" rel="noopener">性影像處理中心</a>」提出檢舉。</strong></p>
 
 
 
@@ -100,7 +100,7 @@ author: 陳柏諺
 
 
 
-<ul><li>2023/06/04<strong>　</strong>王婉諭<strong>　</strong><a href="https://www.facebook.com/wanyu.claire/posts/pfbid02xXmXmZpTGec38xXfZFWQc8qgQG6mFJXSRw9RVX2f4KUX5Up5jrzrjNazVB4PgDfAl">你的惡意或好奇，可能是某些人生命的煉獄</a></li><li>2023/06/05<strong>　</strong>數位女力聯盟WIDI<strong>　</strong><a href="https://www.facebook.com/gogowidigo/posts/pfbid02dfheqEtEsF6G7rsV7t6cyYE8G5vbsMTQqoGaZ7m1n3PUZf8LfzoTUR4RfziAVNAPl">【聲明稿】短網址粉專散布性私密影像亂象</a></li><li>2023/06/05<strong>　</strong>洪申翰<strong>　</strong><a href="https://www.facebook.com/hungsunhan/posts/pfbid02bPZGCn1qhXQkX3dH3sN1BL8RoudVqU8W1u5JSDeitDcufKBQP3zP9zu5SXksq4QYl">小心觸法吃上刑責！別成為鼓勵散布違法性私密影像的幫兇！</a></li><li>2023/06/05<strong>　</strong>衛生福利部<strong>　</strong><a href="https://www.mohw.gov.tw/cp-6563-74815-1.html">終結性影像，沒有人是局外人！</a></li></ul>
+<ul><li>2023/06/04<strong>　</strong>王婉諭<strong>　</strong><a href="https://www.facebook.com/wanyu.claire/posts/pfbid02xXmXmZpTGec38xXfZFWQc8qgQG6mFJXSRw9RVX2f4KUX5Up5jrzrjNazVB4PgDfAl" target="_blank" rel="noopener">你的惡意或好奇，可能是某些人生命的煉獄</a></li><li>2023/06/05<strong>　</strong>數位女力聯盟WIDI<strong>　</strong><a href="https://www.facebook.com/gogowidigo/posts/pfbid02dfheqEtEsF6G7rsV7t6cyYE8G5vbsMTQqoGaZ7m1n3PUZf8LfzoTUR4RfziAVNAPl" target="_blank" rel="noopener">【聲明稿】短網址粉專散布性私密影像亂象</a></li><li>2023/06/05<strong>　</strong>洪申翰<strong>　</strong><a href="https://www.facebook.com/hungsunhan/posts/pfbid02bPZGCn1qhXQkX3dH3sN1BL8RoudVqU8W1u5JSDeitDcufKBQP3zP9zu5SXksq4QYl" target="_blank" rel="noopener">小心觸法吃上刑責！別成為鼓勵散布違法性私密影像的幫兇！</a></li><li>2023/06/05<strong>　</strong>衛生福利部<strong>　</strong><a href="https://www.mohw.gov.tw/cp-6563-74815-1.html" target="_blank" rel="noopener">終結性影像，沒有人是局外人！</a></li></ul>
 
 
 
