--- a/_posts/2023-06-07-PQ-澳洲總理艾班尼斯-美中對話是印太安全的第一道護欄.html
+++ b/_posts/2023-06-07-PQ-澳洲總理艾班尼斯-美中對話是印太安全的第一道護欄.html
@@ -46,7 +46,7 @@ author: 張東和
 
 
 
-<p class="pqnote"><strong>「香格里拉對話」</strong>（Shangri-La Dialogue）是亞太地區安全峰會，由設立在英國的國際戰略研究所（IISS）主辦，自 2002 年開始，是一個主要針對亞洲的安全挑戰進行論辯的平台，以深化亞太國家在安全上的互信，每年 6 月上旬固定在新加坡舉辦。</p>
+<p class="pqnote"><strong>「香格里拉對話」</strong>（<strong>Shangri-La Dialogue</strong>）是亞太地區安全峰會，由設立在英國的<strong>國際戰略研究所（IISS）</strong>主辦，自 2002 年開始，是一個主要針對亞洲的安全挑戰進行論辯的平台，以深化亞太國家在安全上的互信，每年 6 月上旬固定在新加坡舉辦。</p>
 
 
 
@@ -72,7 +72,7 @@ author: 張東和
 
 
 
-<p>如澳洲總理艾班尼斯（Anthony Albanese）在開幕致詞支持美國拜登倡議建立美中對話的管道，艾班尼斯說道：美中若是缺乏對話的壓力閥，如果無法在決策面拿起電話尋求清晰性或是提供某些訊息的脈絡，就可能有更大的風險，並外溢到難以挽回的行動和反制。</p>
+<p>如澳洲總理艾班尼斯（Anthony Albanese）在開幕致詞支持美國拜登倡議建立美中對話的管道，艾班尼斯說道：<strong>美中若是缺乏對話的壓力閥</strong>，如果無法在決策面拿起電話尋求清晰性或是提供某些訊息的脈絡，<strong>就可能有更大的風險，並外溢到難以挽回的行動和反制</strong>。</p>
 
 
 
@@ -80,11 +80,11 @@ author: 張東和
 
 
 
-<p>印太區域的自由、和平與繁榮是印太國家的共同願景，面對區域衝突的可能與和平，艾班尼斯說道：「和平不是禮物也從不是被給予的東西。和平是需要被建立、追求、捍衛與維護。」</p>
+<p>印太區域的自由、和平與繁榮是印太國家的共同願景，面對區域衝突的可能與和平，艾班尼斯說道：「<strong>和平不是禮物也從不是被給予的東西。和平是需要被建立、追求、捍衛與維護</strong>。」</p>
 
 
 
-<p>面對過去中國經濟脅迫以及近期澳中關係的改善，澳洲面對美中兩國的競爭與對抗，是否會持續升級，也是其他國家所擔憂的。不過，艾班尼斯所提的澳洲策略，可能作為其他國家應對方法：投資自己的能力和關係，並以威懾和外交，以有利於經濟競爭並防範戰略衝突。</p>
+<p>面對過去中國經濟脅迫以及近期澳中關係的改善，澳洲面對美中兩國的競爭與對抗，是否會持續升級，也是其他國家所擔憂的。不過，艾班尼斯所提的澳洲策略，可能作為其他國家應對方法：<strong>投資自己的能力和關係，並以威懾和外交，以有利於經濟競爭並防範戰略衝突</strong>。</p>
 
 
 
@@ -96,7 +96,7 @@ author: 張東和
 
 
 
-<p>從 6 月 2 日奧斯汀在香格里拉對話的演講題目〈夥伴關係的力量〉，可見一斑。其中更提到了美國防衛策略的方式與目的：「我們打造了新的友誼，深化了舊的聯盟。我們強化威懾以防止衝突。我們捍衛了保護我們所有人的規則和規範。我們更靠近了活在印太區域的人們所希望美好未來——他們也理應獲得這樣的未來」</p>
+<p>從 6 月 2 日奧斯汀在香格里拉對話的演講題目<strong>〈夥伴關係的力量〉</strong>，可見一斑。其中更提到了美國防衛策略的方式與目的：「我們打造了<strong>新的友誼</strong>，深化了<strong>舊的聯盟</strong>。我們<strong>強化威懾以防止衝</strong>突。我們捍衛了保護我們所有人的規則和規範。我們更靠近了活在印太區域的人們所希望美好未來——他們也理應獲得這樣的未來」</p>
 
 
 
@@ -108,11 +108,7 @@ author: 張東和
 
 
 
-<p>美國印太戰略規畫說明得很清楚：在既有的 QUAD 與 AUKUS 擴大、將歐盟拉進來，同時讓北約布局印太區域、結合日、韓、菲律賓，強化太平洋島國。</p>
-
-
-
-<p>因此，6 月 3 日展開的美日澳三方會談，再次強調基於國際法，和平解決爭端，展開「自由、開放和安全的印太地區的願景」。</p>
+<p>美國印太戰略規畫說明得很清楚：在既有的 QUAD 與 AUKUS 擴大、將歐盟拉進來，同時讓北約布局印太區域、結合日、韓、菲律賓，強化太平洋島國。因此，6 月 3 日展開的美日澳三方會談，再次強調基於國際法，和平解決爭端，展開「自由、開放和安全的印太地區的願景」。</p>
 
 
 
@@ -122,11 +118,11 @@ author: 張東和
 
 
 
-<p>聲明中，除了反對任何單方面以武力脅迫改變現狀之外，強烈反對中國在東、南中國海對中國主張和行動，在過去 G7 就曾經提及包括：南中國海爭議地物（如島礁）的軍事化、中國海警與海上民兵、破壞其他國家近海資源的開採。</p>
+<p>聲明中，除了反對任何單方面以武力脅迫改變現狀之外，強烈反對中國在東、南中國海對中國主張和行動，在過去 G7 就曾經提及包括：<strong>南中國海爭議地物（如島礁）的軍事化、中國海警與海上民兵、破壞其他國家近海資源的開採</strong>。</p>
 
 
 
-<p>就在 6 月 3 日的同一天，菲律賓加入了美日澳，這是史上這四國部長第一次聚首，這四個國家預計將在南中國海聯合進行海上巡邏，日本將提供菲律賓巡邏艦以及出售空中雷達系統，監控中國軍隊動向並進行嚇阻。</p>
+<p>就在 6 月 3 日的同一天，菲律賓加入了美日澳，這是<strong>史上這四國部長第一次聚首</strong>，這四個國家預計將在南中國海聯合進行海上巡邏，日本將提供菲律賓巡邏艦以及出售空中雷達系統，監控中國軍隊動向並進行嚇阻。</p>
 
 
 
