--- a/_posts/2023-06-07-INMEDIA-涉劏房殺害3女童-印度籍母親被控3項謀殺-留院未能應訊.html
+++ b/_posts/2023-06-07-INMEDIA-涉劏房殺害3女童-印度籍母親被控3項謀殺-留院未能應訊.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/06071138-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>29歲印度裔母親涉在深水埗劏房內殺害3名年齡分別為2歲、4歲及5歲的女童，3名女童送院後證實不治，母親被控3項謀殺罪。案件今（7日）於九龍城裁判法院首次提堂，惟控方指被告仍然在青山醫院留醫，未能出庭應訊。署理主任裁判官黃雅茵遂押後案件至6月12日，或更早時間被告出院後再提堂，期間交由警方看管。控方提到被告為印度籍，申請下次聆訊安排旁述普語翻譯員。</p>
-<p>被告為UR, REHMAN AAMINA（29歲，無業）。控罪指她於2023年6月5日，在深水埗桂林街115號一個單位內，謀殺JAMEEL Aayat Ur Rahmah、JAMEEL Raina Ur Raheema和Bibi Aafia JAMEEL。</p>
+<img src="https://www.inmediahk.net/files/column_images/06071138-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>29歲印度裔母親涉在深水埗劏房內殺害3名年齡分別為2歲、4歲及5歲的女童，3名女童送院後證實不治，母親被控3項謀殺罪。案件今（7日）於九龍城裁判法院首次提堂，惟控方指被告仍然在青山醫院留醫，未能出庭應訊。署理主任裁判官黃雅茵遂押後案件至6月12日，或更早時間被告出院後再提堂，期間交由警方看管。控方提到被告為印度籍，申請下次聆訊安排旁遮普語翻譯員。</p>
+<p>被告為 UR, REHMAN AAMINA（29歲，無業）。控罪指她於2023年6月5日，在深水埗桂林街115號一個單位內，謀殺 JAMEEL Aayat Ur Rahmah、JAMEEL Raina Ur Raheema 和 Bibi Aafia JAMEEL。</p>
 <p>案件編號：KCCC1494/2023</p>
 </div></div></div>
